docs/pages/versions/v56.0.0/sdk/ui/swift-ui/disclosuregroup.mdx
---
modificationDate: May 26, 2026
title: DisclosureGroup
description: A SwiftUI DisclosureGroup component for displaying expandable content.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI DisclosureGroup matches the official SwiftUI [DisclosureGroup API](https://developer.apple.com/documentation/swiftui/disclosuregroup) and displays a disclosure indicator that reveals or hides content.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/disclosuregroup/ios-light.webp"
  darkSrc="/static/images/expo-ui/disclosuregroup/ios-dark.webp"
  alt="DisclosureGroup expanded inside a Form"
/>

## Installation

<APIInstallSection />

## Usage

### Basic disclosure group

`DisclosureGroup` is most commonly used inside a [`Form`](form) so it picks up the standard iOS list styling with a chevron indicator.

```tsx BasicDisclosureGroupExample.tsx
import { useState } from 'react';
import { DisclosureGroup, Form, Host, Section, Text } from '@expo/ui/swift-ui';

export default function BasicDisclosureGroupExample() {
  const [isExpanded, setIsExpanded] = useState(true);
  return (
    <Host style={{ flex: 1 }}>
      <Form>
        <Section>
          <DisclosureGroup
            label="Advanced settings"
            isExpanded={isExpanded}
            onIsExpandedChange={setIsExpanded}>
            <Text>Auto-update apps</Text>
            <Text>App downloads</Text>
            <Text>Offload unused apps</Text>
          </DisclosureGroup>
        </Section>
      </Form>
    </Host>
  );
}
```

### Initially expanded

Set `isExpanded` to `true` initially to show the content by default.

```tsx InitiallyExpandedExample.tsx
import { useState } from 'react';
import { Host, DisclosureGroup, Text } from '@expo/ui/swift-ui';

export default function InitiallyExpandedExample() {
  const [isExpanded, setIsExpanded] = useState(true);

  return (
    <Host matchContents>
      <DisclosureGroup label="Details" isExpanded={isExpanded} onIsExpandedChange={setIsExpanded}>
        <Text>This content is visible by default.</Text>
      </DisclosureGroup>
    </Host>
  );
}
```

### Custom label

Use `DisclosureGroup.Label` when the label needs custom SwiftUI content or modifiers instead of the `label` string prop.

```tsx CustomLabelDisclosureGroupExample.tsx
import { useState } from 'react';
import { DisclosureGroup, Form, Host, Section, Text } from '@expo/ui/swift-ui';
import { font, foregroundStyle } from '@expo/ui/swift-ui/modifiers';

export default function CustomLabelDisclosureGroupExample() {
  const [isExpanded, setIsExpanded] = useState(false);

  return (
    <Host style={{ flex: 1 }}>
      <Form>
        <Section>
          <DisclosureGroup isExpanded={isExpanded} onIsExpandedChange={setIsExpanded}>
            <DisclosureGroup.Label>
              <Text modifiers={[font({ weight: 'semibold' }), foregroundStyle('#0a7ea4')]}>
                Network options
              </Text>
            </DisclosureGroup.Label>
            <Text>Wi-Fi</Text>
            <Text>Bluetooth</Text>
            <Text>Cellular data</Text>
          </DisclosureGroup>
        </Section>
      </Form>
    </Host>
  );
}
```

## API

```tsx
import { DisclosureGroup } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/disclosuregroup" apiName="DisclosureGroup" />
