docs/pages/versions/v57.0.0/sdk/ui/swift-ui/disclosuregroup.mdx
---
title: DisclosureGroup
description: A SwiftUI DisclosureGroup component for displaying expandable content.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI DisclosureGroup matches the official SwiftUI [DisclosureGroup API](https://developer.apple.com/documentation/swiftui/disclosuregroup) and displays a disclosure indicator that reveals or hides content.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/disclosuregroup/ios-light.webp"
  darkSrc="/static/images/expo-ui/disclosuregroup/ios-dark.webp"
  alt="DisclosureGroup expanded inside a Form"
/>

## Installation

<APIInstallSection />

## Usage

### Basic disclosure group

`DisclosureGroup` is most commonly used inside a [`Form`](form) so it picks up the standard iOS list styling with a chevron indicator.

<ComponentExample
  title="BasicDisclosureGroupExample.tsx"
  src="/static/images/expo-ui/examples/disclosuregroup-basic-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/disclosuregroup-basic-ios-dark.webp"
  alt="An expanded Advanced settings group in a form, listing three settings rows">

```tsx
import { useState } from 'react';
import {
  DisclosureGroup,
  Form,
  Host,
  Section,
  Text,
} from '@expo/ui/swift-ui';

export default function BasicDisclosureGroupExample() {
  const [isExpanded, setIsExpanded] = useState(true);
  return (
    <Host style={{ flex: 1 }}>
      <Form>
        <Section>
          <DisclosureGroup
            label="Advanced settings"
            isExpanded={isExpanded}
            onIsExpandedChange={setIsExpanded}>
            <Text>Auto-update apps</Text>
            <Text>App downloads</Text>
            <Text>Offload unused apps</Text>
          </DisclosureGroup>
        </Section>
      </Form>
    </Host>
  );
}
```

</ComponentExample>

### Initially expanded

Set `isExpanded` to `true` initially to show the content by default.

<ComponentExample
  title="InitiallyExpandedExample.tsx"
  src="/static/images/expo-ui/examples/disclosuregroup-initially-expanded-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/disclosuregroup-initially-expanded-ios-dark.webp"
  alt="A Details group outside a form, expanded to show one line of content">

```tsx
import { useState } from 'react';
import { Host, DisclosureGroup, Text } from '@expo/ui/swift-ui';

export default function InitiallyExpandedExample() {
  const [isExpanded, setIsExpanded] = useState(true);

  // A disclosure group fills the width it is given, so `matchContents` collapses it.
  return (
    <Host style={{ flex: 1 }}>
      <DisclosureGroup
        label="Details"
        isExpanded={isExpanded}
        onIsExpandedChange={setIsExpanded}>
        <Text>This content is visible by default.</Text>
      </DisclosureGroup>
    </Host>
  );
}
```

</ComponentExample>

### Custom label

Use `DisclosureGroup.Label` when the label needs custom SwiftUI content or modifiers instead of the `label` string prop.

<ComponentExample
  title="CustomLabelDisclosureGroupExample.tsx"
  src="/static/images/expo-ui/examples/disclosuregroup-custom-label-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/disclosuregroup-custom-label-ios-dark.webp"
  alt="A collapsed group in a form with a semibold teal Network options label">

```tsx
import { useState } from 'react';
import {
  DisclosureGroup,
  Form,
  Host,
  Section,
  Text,
} from '@expo/ui/swift-ui';
import { font, foregroundStyle } from '@expo/ui/swift-ui/modifiers';

export default function CustomLabelDisclosureGroupExample() {
  const [isExpanded, setIsExpanded] = useState(false);

  return (
    <Host style={{ flex: 1 }}>
      <Form>
        <Section>
          <DisclosureGroup
            isExpanded={isExpanded}
            onIsExpandedChange={setIsExpanded}>
            <DisclosureGroup.Label>
              <Text
                modifiers={[
                  font({ weight: 'semibold' }),
                  foregroundStyle('#0a7ea4'),
                ]}>
                Network options
              </Text>
            </DisclosureGroup.Label>
            <Text>Wi-Fi</Text>
            <Text>Bluetooth</Text>
            <Text>Cellular data</Text>
          </DisclosureGroup>
        </Section>
      </Form>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { DisclosureGroup } from '@expo/ui/swift-ui';
```

<APISection
  packageName="expo-ui/swift-ui/disclosuregroup"
  apiName="DisclosureGroup"
/>
